Remove real API key, add placeholders and update .gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=YouTubeTools
+server.port=${PORT:8080}
 
-youtube.api.key=AIzaSyAC9YiUAMjM5BcNIyj3h49H7O1GcypBCOQ
-youtube.api.base.url=https://www.googleapis.com/youtube/v3
-youtube.api.search.url=${youtube.api.base.url}/search
-youtube.api.videos.url=${youtube.api.base.url}/videos
+youtube.api.key=${YOUTUBE_API_KEY}
+youtube.api.base.url=${YOUTUBE_API_BASE_URL:https://www.googleapis.com/youtube/v3}
+youtube.api.search.url=${YOUTUBE_API_SEARCH_URL:${youtube.api.base.url}/search}
+youtube.api.videos.url=${YOUTUBE_API_VIDEOS_URL:${youtube.api.base.url}/videos}
 
 # Max number of related videos to fetch
 youtube.api.max.related.videos=3
